--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
+    "@next-auth/upstash-redis-adapter": "^3.0.4",
+    "@tailwindcss/forms": "^0.5.4",
     "@types/node": "20.4.3",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@upstash/redis": "^1.22.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "daisyui": "^3.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "lucide-react": "^0.263.0",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "toastify": "^2.0.1",
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
   }
 }
