--- a/package.json
+++ b/package.json
@@ -21,16 +21,22 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "daisyui": "^3.3.1",
+    "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "postcss": "8.4.27",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "react-textarea-autosize": "^8.5.2",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
